	PR binutils/13593 	* nm.c (OPTION_SIZE_SORT): Define. 	(long_options): Don't set no_sort, sort_numerically or 	sort_by_size directly. 	(main): Instead set the flags here, making them mutually exclusive.